2002-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSDate.h: Added NSTimeIntervalSince1970 and
	removed GSTimeNow() from public API.
	* Source/NSDate.m: Update to use NSTimeIntervalSince1970
	* Source/NSTimer.m: Declare GSTimeNow() locally
	* Source/NSprocessInfo.m: ditto
 
Thu Oct 31 00:46:23 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/NSBundle.h: Added more documentation.

Wed Oct 30 23:42:50 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSBundle.m ([+_addFrameworkFromClass:]): New code
	locating linked frameworks magically - no matter where they are on
	disk - by using objc_get_symbol_path().  If that fails or is not
	available, fall back on the existing code.  Fixed NSLog() message.

2002-10-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSThread.m: Implemented and documented new MacOS-X methods -
	([-performSelectorOnMainThread:withObject:waitUntilDone:modes:])
	and ([-performSelectorOnMainThread:withObject:waitUntilDone:])

Wed Oct 30 03:14:34 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/objc-load.h: Added copyright notice.
	(objc_get_symbol_path): Declare to take a Category *, not a struct
	objc_category *, argument; documented.
	* Source/objc-load.m: Include config.h first.  Define _GNU_SOURCE
	if HAVE_DLADDR is defined.
	(objc_get_symbol_path): Fixed crash with classes or categories
	with long names.  Updated declaration.
	* config/objc-sys-dynamic.m4 (OBJC_SYS_DYNAMIC_LINKER): Print a
	message displaying the type of dynamic linker found.  Add -ldl on
	the link line for linux-gnu and other systems, so that dladdr() is
	actually found.  With the 'simple' linker, print a message saying
	if we found dladdr() or not.
	(OBJC_SYS_DYNAMIC): Historical unused macro removed.
	* configure: Regenerated.

2002-10-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: include statvfs.h if available.

2002-10-26  Adam Fedor  <fedor@gnu.org>
